[project]
name = "harwest"
version = "0.3.2"
description = "Harvest code submissions from different platforms to git"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nilesh Sah", email = "nilesh.sah13@outlook.com" }]
license = { text = "MIT" }
keywords = ["harvest", "git", "submissions"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.8.2",
    "gitdb2>=4.0.2",
    "gitpython==3.0.6",
    "lxml>=5.0.2",
    "requests>=2.27.1",
]

[project.urls]
github = "https://github.com/nileshsah/harwest-tool"

[project.scripts]
harwest = "harwest.harwest:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.package-data]
"harwest.lib.resources" = ["language.json", "readme.template"]

[dependency-groups]
dev = ["mypy>=0.910"]
