[project]
name = "harwest"
version = "0.4.0"
description = "Harvest code submissions from different platforms to git"
readme = "README.md"
authors = [
    { name = "Sebastian Certuche", email = "sebascertuche@gmail" },
    { name = "Nsystemilesh Sah", email = "nilesh.sah13@outlook.com" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["competitive programming", "git", "ojs", "codeforces"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.8.2",
    "gitdb2>=4.0.2",
    "gitpython==3.0.6",
    "lxml>=5.0.2",
    "requests>=2.27.1",
]

[project.urls]
github = "https://github.com/sebascert/harwest"

[project.scripts]
harwest = "harwest.harwest:main"

# build configs
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harwest"]
include = [
    "src/harwest/resources/readme.template",
    "src/harwest/resources/language.json",
]

# development dependencies
[dependency-groups]
dev = ["mypy>=0.910", "ruff>=0.0.17"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
