[project]
name = "harwest2"
version = "0.4.0"
description = "Harvest code submissions from different platforms to git"
readme = "README.md"
authors = [
    { name = "Sebastian Certuche", email = "sebascertuche@gmail.com" },
    { name = "Nsystemilesh Sah", email = "nilesh.sah13@outlook.com" },
]
maintainers = [
    { name = "Sebastian Certuche", email = "sebascertuche@gmail.com" },
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["competitive programming", "git", "ojs", "codeforces"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.8.2",
    "gitdb2>=4.0.2",
    "gitpython==3.0.6",
    "lxml>=5.0.2",
    "requests>=2.27.1",
]

[project.urls]
Homepage = "https://github.com/sebascert/harwest"
Repositoty = "https://github.com/sebascert/harwest.git"
Issues = "https://github.com/sebascert/harwest/issues"

[project.scripts]
harwest = "harwest.harwest:main"

# build configs
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/harwest"]
include = ["README.md", "pyproject.toml", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/harwest"]
include = ["README.md", "pyproject.toml", "uv.lock"]

# development dependencies
[dependency-groups]
dev = ["mypy>=0.910", "ruff>=0.0.17"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
